# mdp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  abc.txt  justfile
.github/workflows/: rust.yml
docker/windows-cross-compile/: Dockerfile
example/: mdp_example_file1.md
examples/: mdp_example_file2.md
src/: lib.rs
src/commands/: io.rs  mod.rs
src/commands/list/: command.rs  config.rs  mod.rs
src/commands/search/: command.rs  config.rs
src/commands/tags/: command.rs  config.rs
src/commands/task/: command.rs  config.rs
src/commands/tasks/: command.rs  config.rs
src/commands/tree/: command.rs  config.rs
src/markdown/: errors.rs  mod.rs  parsers.rs  sections.rs  tokenize.rs
src/models/: errors.rs  mod.rs  sections.rs  token.rs  traits.rs
